--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "license": "MIT",
   "scripts": {
+    "clean": "rm -rf ./dist && mkdir dist",
     "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
+    "build:prod": "npm run clean && webpack -p --env production",
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "live-server": "^1.2.0",
     "node-sass": "^4.12.0",
